Fix full projects: single image not shown, slideshow broken, overlay not visible

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -230,6 +230,8 @@ video::-webkit-media-controls {
   right: 0;
   bottom: 0;
   left: 0;
+  background-image: linear-gradient(200deg, rgba(0, 0, 0, 0.01), 33.3%, rgba(0, 0, 0, 0.5) 87.5%);
+  z-index: 9;
   pointer-events: none;
 }
 
